--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm-check-updates": "^16.14.20",
     "react-icons": "^5.3.0",
     "tailwindcss": "^3.4.3",
+    "technodevs": "file:",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
