--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
   "name": "technodevs",
   "type": "module",
-  "version": "1.0.2",
-  "license": "MIT",
-  "description": "Dark themed website template built on AstroJS, designed for fictional startup",
-  "author": {
-    "name": "Mateusz Wyrębek (matt765)",
-    "email": "mateusz.wyrebek@gmail.com",
-    "url": "https://matt765-portfolio.vercel.app/"
-  },
-  "private": true,
+  "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -20,6 +12,9 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource/inter": "^5.0.18",
+    "@storyblok/astro": "^5.0.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.16.10",
     "framer-motion": "^11.2.10",
     "npm": "^10.8.1",
@@ -30,7 +25,8 @@
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
-    "@astrojs/react": "^3.4.0",
+    "@astrojs/react": "^3.6.2",
+    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
