--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/vercel": "^7.8.2",
     "@fontsource/inter": "^5.0.18",
     "@storyblok/astro": "^5.0.2",
     "@types/react": "^18.3.12",
