--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.2",
-    "@astrojs/vercel": "^7.8.2",
+    "@astrojs/node": "^9.0.2",
+    "@astrojs/tailwind": "^5.1.5",
     "@fontsource/inter": "^5.0.18",
-    "@storyblok/astro": "^5.0.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "astro": "^4.16.10",
+    "astro": "^5.1.10",
     "framer-motion": "^11.2.10",
     "npm": "^10.8.1",
     "npm-check-updates": "^16.14.20",
