--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@fontsource/inter": "^5.0.18",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vercel/analytics": "^1.4.1",
     "astro": "^5.1.10",
     "framer-motion": "^11.2.10",
     "npm": "^10.8.1",
@@ -24,8 +23,7 @@
     "react-icons": "^5.3.0",
     "tailwindcss": "^3.4.3",
     "technodevs": "file:",
-    "tiny-invariant": "^1.3.3",
-    "vite": "^6.1.0"
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@astrojs/react": "^3.6.2",
